--- a/templates/home.html
+++ b/templates/home.html
@@ -162,6 +162,15 @@
             margin: 0 0.5rem;
         }
         
+        /* Hide text, show icons only */
+        .docker-nav-item span {
+            display: none;
+        }
+        
+        .docker-nav {
+            padding: 0.75rem 1.25rem;
+        }
+        
         @media (max-width: 768px) {
             .docker-nav {
                 bottom: 1rem;
